--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.png" alt="" /></span>
-							<h1>Suriya T<br>Shree Mithraa M<br>Siva Prakash B<br>Raghavendran Ramasamy<br>Srinath S</h1>
+							<h1>Sathana Kamala E<br>Subbiah Surya Kumar J<br>Saravana Balaji P<br>Nirmal Raj N<br>Anwar A<br>Rubesh Kumaran S</h1>
 							<p>Information Technology and EIE</p>
 						</header>
 						<hr />
